Fixed spacing between action buttons

--- a/src/app/main/artifacts/artifact/artifact.component.css
+++ b/src/app/main/artifacts/artifact/artifact.component.css
@@ -47,3 +47,9 @@ mat-list-item:hover
   margin-top: 10px;
   margin-bottom: 10px;
 }
+
+.margin-horizontal
+{
+  margin-left:5px;
+  margin-right:5px;
+}
